[project]
name = "eternal_infiltrate"
version = "0.0.0"
description = "Recommends purchases in the card game Eternal."
authors = [
    "Toren Darby <TorenDarby@gmail.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.6"

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/