[project]
name = "eternal_infiltrate"
version = "0.0.0"
description = "Recommends purchases in the card game Eternal."
authors = [
    "Toren Darby <TorenDarby@gmail.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.7"

[tool.black]
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/'''